<resources>
    <string name="app_name">Collections</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="select_collection">Please Select a Collection!</string>
    <string name="collection_item_select_collection">Select A Collection</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter a name</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter a description</string>
    <string name="value">Value</string>
    <string name="enter_value">Enter a value</string>
    <string name="reference">Reference</string>
    <string name="enter_reference">Enter a reference</string>
    <string name="photos">Photos</string>
    <string name="new_collection_name">New Collection Name</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_this_photo">Do you want to delete this photo?</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_this_item">Delete This Collection Item?</string>
    <string name="delete_collection">Delete Collection</string>
    <string name="delete_collection_confirm">Do you want to delete this collection and all its associated items and photos?</string>
    <string name="collection_summary">Summary of Collections</string>
    <string name="export_as">Export Collection...</string>
    <string name="item_count">Item Count:</string>
    <string name="sum_of_values">Sum of Values:</string>
    <string name="disclaimers_and_thank_you">Disclaimers and Thank You</string>
    <string name="disclaimer">Certain Aspects of this Application May Not Work as Intended Across Devices.\nI am made this app for the joy of collecting things, if you have any suggestions, use the suggestion box in app.\nI may also not always be efficient at fixing bugs but I\'ll take the bugs seriously</string>
    <string name="thank_you">Thank you to jzedlitz for the chest posted in Creative Commons.\nThank you to freepik for some of the icons.\nThank you to droidninja for the use of the file picker.</string>
    <string name="delete_all">Delete All Collections and Their Associated Items?</string>
    <string name="delete_all_title">Delete All Collections</string>
    <string name="photo_size_error">Cannot Change Picture Sizes Yet!</string>
    <string name="material_title">Material</string>
    <string name="material_name">Enter a new Material name</string>
    <string name="name_here">Name Here</string>
</resources>
