<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@color/transparent_black_percent_50"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disclaimers_and_thank_you"
        android:textColor="@color/white"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:textSize="14sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/dialog_disclaimer_disclaimer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:text="@string/disclaimer"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        />
    <TextView
        android:id="@+id/dialog_disclaimer_thankyou_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:layout_margin="12dp"
        android:padding="4dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        />
    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/dialog_disclaimer_button"
        android:text="@string/ok"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:background="@color/transparent_black_percent_25"
        />
</LinearLayout>