<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dicebackground">
    <TextView
        android:id="@+id/dialog_edittext_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center|left"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:text="@string/material_name"
        />
    <EditText
        android:id="@+id/dialog_edittext_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_black_percent_25"
        android:textColor="@color/white"
        android:textColorHint="@color/transparent_white_percent_50"
        android:textSize="18sp"
        android:padding="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/name_here"
        android:gravity="center|left"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"></LinearLayout>
    <Button
        android:id="@+id/dialog_edittext_ok_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:background="@color/transparent_black_percent_25"
        android:layout_gravity="center_horizontal" />
</LinearLayout>